<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/padding_general_use">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_general_use"
        android:layout_marginStart="@dimen/padding_general_use"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            tools:text="@string/title_String" />

        <TextView
            android:id="@+id/news_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_list_properties"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            tools:text="@string/section_String" />

        <TextView
            android:id="@+id/news_publication_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/date_String" />
    </LinearLayout>

</LinearLayout>